RDS-VPC.yaml.yaml
# Description of what this change includes
# Revision number
# Date

AWSTemplateFormatVersion: '2010-09-09'
Description: AWS CloudFormation template to create a VPC across 3 AZs in the US-West-2 region and deploy an RDS instance.

Resources:
  # VPC Definition
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: "VPC-joebur2749"

  # Subnets
  SubnetAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.1.0/24"
      AvailabilityZone: "us-west-2a"
      Tags:
        - Key: Name
          Value: "Subnet-1-AZ1"

  SubnetAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.2.0/24"
      AvailabilityZone: "us-west-2b"
      Tags:
        - Key: Name
          Value: "Subnet-2-AZ2"

  SubnetAZ3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.3.0/24"
      AvailabilityZone: "us-west-2c"
      Tags:
        - Key: Name
          Value: "Subnet-3-AZ3"

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: "VPC-joebur2749-IGW"

  IGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Route Table for Public Subnets
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  # Associate Route Table with Subnets
  RouteTableAssociationAZ1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetAZ1
      RouteTableId: !Ref PublicRouteTable

  RouteTableAssociationAZ2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetAZ2
      RouteTableId: !Ref PublicRouteTable

  RouteTableAssociationAZ3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetAZ3
      RouteTableId: !Ref PublicRouteTable

  # Security Group for RDS Instance
  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable MySQL access"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: "0.0.0.0/0"

  # RDS Instance
  RdsInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: db.t3.micro
      DBInstanceIdentifier: playground-db
      Engine: MySQL
      MasterUsername: Admin
      MasterUserPassword: CloudAcademy123!
      AllocatedStorage: '5'
      VPCSecurityGroups:
        - !Ref RdsSecurityGroup
      DBSubnetGroupName: !Ref DBSubnetGroup

  # DB Subnet Group
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "Subnets for RDS instance"
      SubnetIds:
        - !Ref SubnetAZ1
        - !Ref SubnetAZ2
        - !Ref SubnetAZ3

Outputs:
  VPCId:
    Description: "VPC ID"
    Value: !Ref VPC
  SubnetAZ1Id:
    Description: "Subnet ID in AZ 1"
    Value: !Ref SubnetAZ1
  SubnetAZ2Id:
    Description: "Subnet ID in AZ 2"
    Value: !Ref SubnetAZ2
  SubnetAZ3Id:
    Description: "Subnet ID in AZ 3"
    Value: !Ref SubnetAZ3
  InternetGatewayId:
    Description: "Internet Gateway ID"
    Value: !Ref InternetGateway
  RdsInstanceEndpoint:
    Description: "RDS Instance Endpoint"
    Value: !GetAtt RdsInstance.Endpoint.Address
